@@ -1,6 +1,7 @@
 Canta 0.2-beta7
 
-* added second lyrics container, now there are first the current and second the next lyrics line
+* new config options "Easier tone hitting" and "Allowed difference"
+* second lyrics container, now there are first the current and second the next lyrics line
 * duration of the song gets displayed behind the position [ pos / duration ]
 * improved song result system:
  - passed/hitted points gets collected seperatly
